chore: OpenAPIの定義にサーバと認証情報を追加
